<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_text_size"
            android:textSize="22dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvTextSmall"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_edittext"
            android:text="@string/text_small"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvTextMedium"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_edittext"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/text_medium"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvTextLarge"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_edittext"
            android:text="@string/text_large"
            android:textColor="@color/black"
            android:textSize="22sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>