<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/page_padding">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtSearch"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/search_city"
                android:imeOptions="actionSearch"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:paddingEnd="48dp"
                android:singleLine="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btnClear"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="12dp"
                android:contentDescription="@string/clear_input"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btnGetWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/get_weather" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/swipeContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/weatherList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:contentDescription="@string/get_weather"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/weather_day_item" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/tvEmpty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:contentDescription="@string/data_not_found"
            android:text="@string/data_not_found"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:visibility="gone" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>